argocd/root-app/templates/phoenix.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: phoenix
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
