argocd/root-app/templates/portkey.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portkey
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
