argocd/root-app/templates/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-rw-lb
  namespace: db
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.165
  ports:
    - name: postgres
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    cnpg.io/cluster: postgres
    cnpg.io/instanceRole: primary
