argocd/root-app/templates/sure.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sure
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sure
  namespace: sure
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - sure.vcov.org
    - sure.lan
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - name: sure
        port: 80
