argocd/root-app/templates/traefik.yaml
apiVersion: v1
kind: Service
metadata:
  name: technitium-primary
  namespace: traefik
spec:
  type: ExternalName
  externalName: dns1.lan
---
apiVersion: v1
kind: Service
metadata:
  name: technitium-secondary
  namespace: traefik
spec:
  type: ExternalName
  externalName: mini.lan
---
apiVersion: v1
kind: Service
metadata:
  name: 3d-printer
  namespace: traefik
spec:
  type: ExternalName
  externalName: 3dprinter.lan
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: technitium
#   namespace: traefik
# spec:
#   rules:
#   - host: dns.lan
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: technitium
#             port:
#               number: 5380
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: technitium
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dns.lan`)
      kind: Rule
      services:
        - name: technitium-primary
          port: 5380
          sticky:
            cookie:
              name: traefik-sticky-cookie
              secure: true
              httpOnly: true
        - name: technitium-secondary
          port: 5380
          sticky:
            cookie:
              name: traefik-sticky-cookie
              secure: true
              httpOnly: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: 3d-printer
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dns.lan`)
      kind: Rule
      services:
        - name: technitium-primary
          port: 5380
          sticky:
            cookie:
              name: traefik-sticky-cookie
              secure: true
              httpOnly: true
